tests/compile_fail/partial_eq/unknown_struct_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/partial_eq/unknown_struct_attribute.rs:2:14
  |
2 | #[partial_eq(unknown)]
  |              ^^^^^^^
